syntax="proto3";

import "proto/user/user.proto";
option go_package="github.com/rizkiramadhan201987/learn-grpc/protogen/go/bfi/usergroupservice/usergroup";

message UserGroup {
    int32 group_id = 20 [
        json_name="group_id"
    ];
    string group_name = 21 [
        json_name="group_name"
    ];
    repeated string roles = 22;
    repeated Address rs = 23;
    string description = 24;
}